# cima-esp-gopro

./: CMakeLists.txt  README.md  init_cmd.bat  sdkconfig  sdkconfig.old
azure-middleware-config/: azure_iot_config.h  core_mqtt_config.h
components/azure-iot-middleware-freertos/: CMakeLists.txt  README.md
components/azure-sample-iot/: CMakeLists.txt  README.md
components/azure-sample-iot/common/utilities/: crypto_using_mbedtls.c
components/azure-sdk-for-c/: CMakeLists.txt  README.md
components/cima-iot/: AzureConfig.cpp  CMakeLists.txt  CertSource.cpp  DeviceProvisioningClient.cpp  IoTHubManager.cpp  README.md
components/cima-iot/include/iot/: CertSource.h  IoTHubManager.h
components/cima-system/: Log.cpp
components/cima-system/network/: WifiManager.cpp
components/coreMQTT/: CMakeLists.txt  README.md
components/gopro-http-client/: CMakeLists.txt  GoProClient.cpp  README.md
components/gopro-http-client/include/gopro/: GoProClient.h
main/: Agent.cpp  Agent.h  CMakeLIsts.txt  GoProControlMain.cpp  LightGroupService.cpp  LightGroupService.h  LightHubMain.cpp  LightSettings.h
main/system/network/: NetworkManager.cpp  NetworkManager.h  WifiManager.cpp
